--- a/src/mdtutils/Makefile
+++ b/src/mdtutils/Makefile
@@ -336,6 +336,60 @@ mdtBuffer.cpp.s:
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtBuffer.cpp.s
 .PHONY : mdtBuffer.cpp.s
 
+mdtError.o: mdtError.cpp.o
+.PHONY : mdtError.o
+
+# target to build an object file
+mdtError.cpp.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtError.cpp.o
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtError.cpp.o
+.PHONY : mdtError.cpp.o
+
+mdtError.i: mdtError.cpp.i
+.PHONY : mdtError.i
+
+# target to preprocess a source file
+mdtError.cpp.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtError.cpp.i
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtError.cpp.i
+.PHONY : mdtError.cpp.i
+
+mdtError.s: mdtError.cpp.s
+.PHONY : mdtError.s
+
+# target to generate assembly for a file
+mdtError.cpp.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtError.cpp.s
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtError.cpp.s
+.PHONY : mdtError.cpp.s
+
+mdtErrorOut.o: mdtErrorOut.cpp.o
+.PHONY : mdtErrorOut.o
+
+# target to build an object file
+mdtErrorOut.cpp.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtErrorOut.cpp.o
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtErrorOut.cpp.o
+.PHONY : mdtErrorOut.cpp.o
+
+mdtErrorOut.i: mdtErrorOut.cpp.i
+.PHONY : mdtErrorOut.i
+
+# target to preprocess a source file
+mdtErrorOut.cpp.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtErrorOut.cpp.i
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtErrorOut.cpp.i
+.PHONY : mdtErrorOut.cpp.i
+
+mdtErrorOut.s: mdtErrorOut.cpp.s
+.PHONY : mdtErrorOut.s
+
+# target to generate assembly for a file
+mdtErrorOut.cpp.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtErrorOut.cpp.s
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtErrorOut.cpp.s
+.PHONY : mdtErrorOut.cpp.s
+
 mdtParentChildTableItem.o: mdtParentChildTableItem.cpp.o
 .PHONY : mdtParentChildTableItem.o
 
@@ -444,6 +498,33 @@ mdtSerialPortConfig.cpp.s:
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortConfig.cpp.s
 .PHONY : mdtSerialPortConfig.cpp.s
 
+mdtSerialPortCtlThread.o: mdtSerialPortCtlThread.cpp.o
+.PHONY : mdtSerialPortCtlThread.o
+
+# target to build an object file
+mdtSerialPortCtlThread.cpp.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortCtlThread.cpp.o
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortCtlThread.cpp.o
+.PHONY : mdtSerialPortCtlThread.cpp.o
+
+mdtSerialPortCtlThread.i: mdtSerialPortCtlThread.cpp.i
+.PHONY : mdtSerialPortCtlThread.i
+
+# target to preprocess a source file
+mdtSerialPortCtlThread.cpp.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortCtlThread.cpp.i
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortCtlThread.cpp.i
+.PHONY : mdtSerialPortCtlThread.cpp.i
+
+mdtSerialPortCtlThread.s: mdtSerialPortCtlThread.cpp.s
+.PHONY : mdtSerialPortCtlThread.s
+
+# target to generate assembly for a file
+mdtSerialPortCtlThread.cpp.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortCtlThread.cpp.s
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortCtlThread.cpp.s
+.PHONY : mdtSerialPortCtlThread.cpp.s
+
 mdtSerialPortInterface.o: mdtSerialPortInterface.cpp.o
 .PHONY : mdtSerialPortInterface.o
 
@@ -525,6 +606,33 @@ mdtSerialPortManager.cpp.s:
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortManager.cpp.s
 .PHONY : mdtSerialPortManager.cpp.s
 
+mdtSerialPortThread.o: mdtSerialPortThread.cpp.o
+.PHONY : mdtSerialPortThread.o
+
+# target to build an object file
+mdtSerialPortThread.cpp.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortThread.cpp.o
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortThread.cpp.o
+.PHONY : mdtSerialPortThread.cpp.o
+
+mdtSerialPortThread.i: mdtSerialPortThread.cpp.i
+.PHONY : mdtSerialPortThread.i
+
+# target to preprocess a source file
+mdtSerialPortThread.cpp.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortThread.cpp.i
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortThread.cpp.i
+.PHONY : mdtSerialPortThread.cpp.i
+
+mdtSerialPortThread.s: mdtSerialPortThread.cpp.s
+.PHONY : mdtSerialPortThread.s
+
+# target to generate assembly for a file
+mdtSerialPortThread.cpp.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtSerialPortThread.cpp.s
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtSerialPortThread.cpp.s
+.PHONY : mdtSerialPortThread.cpp.s
+
 mdtTime.o: mdtTime.cpp.o
 .PHONY : mdtTime.o
 
@@ -551,6 +659,54 @@ mdtTime.cpp.s:
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/mdtTime.cpp.s
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils_static.dir/build.make src/mdtutils/CMakeFiles/mdtutils_static.dir/mdtTime.cpp.s
 .PHONY : mdtTime.cpp.s
+
+moc_mdtAbstractSerialPort.o: moc_mdtAbstractSerialPort.cxx.o
+.PHONY : moc_mdtAbstractSerialPort.o
+
+# target to build an object file
+moc_mdtAbstractSerialPort.cxx.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtAbstractSerialPort.cxx.o
+.PHONY : moc_mdtAbstractSerialPort.cxx.o
+
+moc_mdtAbstractSerialPort.i: moc_mdtAbstractSerialPort.cxx.i
+.PHONY : moc_mdtAbstractSerialPort.i
+
+# target to preprocess a source file
+moc_mdtAbstractSerialPort.cxx.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtAbstractSerialPort.cxx.i
+.PHONY : moc_mdtAbstractSerialPort.cxx.i
+
+moc_mdtAbstractSerialPort.s: moc_mdtAbstractSerialPort.cxx.s
+.PHONY : moc_mdtAbstractSerialPort.s
+
+# target to generate assembly for a file
+moc_mdtAbstractSerialPort.cxx.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtAbstractSerialPort.cxx.s
+.PHONY : moc_mdtAbstractSerialPort.cxx.s
+
+moc_mdtErrorOut.o: moc_mdtErrorOut.cxx.o
+.PHONY : moc_mdtErrorOut.o
+
+# target to build an object file
+moc_mdtErrorOut.cxx.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtErrorOut.cxx.o
+.PHONY : moc_mdtErrorOut.cxx.o
+
+moc_mdtErrorOut.i: moc_mdtErrorOut.cxx.i
+.PHONY : moc_mdtErrorOut.i
+
+# target to preprocess a source file
+moc_mdtErrorOut.cxx.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtErrorOut.cxx.i
+.PHONY : moc_mdtErrorOut.cxx.i
+
+moc_mdtErrorOut.s: moc_mdtErrorOut.cxx.s
+.PHONY : moc_mdtErrorOut.s
+
+# target to generate assembly for a file
+moc_mdtErrorOut.cxx.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtErrorOut.cxx.s
+.PHONY : moc_mdtErrorOut.cxx.s
 
 moc_mdtParentChildTableItem.o: moc_mdtParentChildTableItem.cxx.o
 .PHONY : moc_mdtParentChildTableItem.o
@@ -600,6 +756,30 @@ moc_mdtParentChildTableModel.cxx.s:
 	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtParentChildTableModel.cxx.s
 .PHONY : moc_mdtParentChildTableModel.cxx.s
 
+moc_mdtSerialPort.o: moc_mdtSerialPort.cxx.o
+.PHONY : moc_mdtSerialPort.o
+
+# target to build an object file
+moc_mdtSerialPort.cxx.o:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtSerialPort.cxx.o
+.PHONY : moc_mdtSerialPort.cxx.o
+
+moc_mdtSerialPort.i: moc_mdtSerialPort.cxx.i
+.PHONY : moc_mdtSerialPort.i
+
+# target to preprocess a source file
+moc_mdtSerialPort.cxx.i:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtSerialPort.cxx.i
+.PHONY : moc_mdtSerialPort.cxx.i
+
+moc_mdtSerialPort.s: moc_mdtSerialPort.cxx.s
+.PHONY : moc_mdtSerialPort.s
+
+# target to generate assembly for a file
+moc_mdtSerialPort.cxx.s:
+	cd /home/philippe/programmation/multixDiagTools && $(MAKE) -f src/mdtutils/CMakeFiles/mdtutils.dir/build.make src/mdtutils/CMakeFiles/mdtutils.dir/moc_mdtSerialPort.cxx.s
+.PHONY : moc_mdtSerialPort.cxx.s
+
 # Help Target
 help:
 	@echo "The following are some of the valid targets for this Makefile:"
@@ -633,6 +813,12 @@ help:
 	@echo "... mdtBuffer.o"
 	@echo "... mdtBuffer.i"
 	@echo "... mdtBuffer.s"
+	@echo "... mdtError.o"
+	@echo "... mdtError.i"
+	@echo "... mdtError.s"
+	@echo "... mdtErrorOut.o"
+	@echo "... mdtErrorOut.i"
+	@echo "... mdtErrorOut.s"
 	@echo "... mdtParentChildTableItem.o"
 	@echo "... mdtParentChildTableItem.i"
 	@echo "... mdtParentChildTableItem.s"
@@ -645,6 +831,9 @@ help:
 	@echo "... mdtSerialPortConfig.o"
 	@echo "... mdtSerialPortConfig.i"
 	@echo "... mdtSerialPortConfig.s"
+	@echo "... mdtSerialPortCtlThread.o"
+	@echo "... mdtSerialPortCtlThread.i"
+	@echo "... mdtSerialPortCtlThread.s"
 	@echo "... mdtSerialPortInterface.o"
 	@echo "... mdtSerialPortInterface.i"
 	@echo "... mdtSerialPortInterface.s"
@@ -654,15 +843,27 @@ help:
 	@echo "... mdtSerialPortManager.o"
 	@echo "... mdtSerialPortManager.i"
 	@echo "... mdtSerialPortManager.s"
+	@echo "... mdtSerialPortThread.o"
+	@echo "... mdtSerialPortThread.i"
+	@echo "... mdtSerialPortThread.s"
 	@echo "... mdtTime.o"
 	@echo "... mdtTime.i"
 	@echo "... mdtTime.s"
+	@echo "... moc_mdtAbstractSerialPort.o"
+	@echo "... moc_mdtAbstractSerialPort.i"
+	@echo "... moc_mdtAbstractSerialPort.s"
+	@echo "... moc_mdtErrorOut.o"
+	@echo "... moc_mdtErrorOut.i"
+	@echo "... moc_mdtErrorOut.s"
 	@echo "... moc_mdtParentChildTableItem.o"
 	@echo "... moc_mdtParentChildTableItem.i"
 	@echo "... moc_mdtParentChildTableItem.s"
 	@echo "... moc_mdtParentChildTableModel.o"
 	@echo "... moc_mdtParentChildTableModel.i"
 	@echo "... moc_mdtParentChildTableModel.s"
+	@echo "... moc_mdtSerialPort.o"
+	@echo "... moc_mdtSerialPort.i"
+	@echo "... moc_mdtSerialPort.s"
 .PHONY : help
 
 
