Added device file classes in mdtutils.
Goal is to have common read/write functions for devices files.

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -12,6 +12,9 @@ set (LIB_DEST_DIR "${PROJECT_SOURCE_DIR}/../../bin")
 set (HEADER_FILES 
           # mdtError
           mdtErrorOut.h
+          # Device file I/O
+          mdtAbstractDeviceFile.h
+          mdtDeviceFile.h
           # Essais
           mdtParentChildTableModel.h
           mdtParentChildTableItem.h
@@ -28,6 +31,10 @@ set (SOURCES_FILES
           # mdtError
           mdtError.cpp
           mdtErrorOut.cpp
+          # Device file I/O
+          mdtAbstractDeviceFile.cpp
+          mdtDeviceFile.cpp
+          mdtDeviceFileConfig.cpp
           # Essais
           mdtParentChildTableModel.cpp
           mdtParentChildTableItem.cpp
@@ -42,6 +49,16 @@ set (FORM_FILES
 set (RESOURCE_FILES
 
     )
+
+# Platform specific files
+
+# Unix (Posix) specific files
+if(UNIX)
+  message("${PROJECT_SOURCE_DIR}/linux")
+  set (SOURCES_FILES ${SOURCES_FILES} 
+    linux/mdtDeviceFilePosix.cpp
+  )
+endif(UNIX)
 
 # Fichiers à traiter par le compilateur moc
 QT4_WRAP_CPP (MOC_HEADERS ${HEADER_FILES})
